# Rag_Pipeline

./: README.md  pyproject.toml  req.txt  test.py
Pipeline_2/Tool_calling/: tool1.py
Pipeline_2/Tool_calling/chroma_db/: chroma.sqlite3
Pipeline_2/src/: chat.py  ingest.py  req2.txt  retrieval.py
src/: ingestion_pipeline.py  retrieval_pipeline.py  test+ollama.py
src/chroma_db/: chroma.sqlite3
src/chroma_db/35d565ed-737e-45ac-8177-e5b11e5546ef/: index_metadata.pickle
